--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,7 +35,12 @@
     ]
   },
   "devDependencies": {
+    "add": "^2.0.6",
     "babel-plugin-import": "^1.12.0",
-    "react-app-rewired": "^2.1.3"
+    "customize-cra": "^0.4.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "react-app-rewired": "^2.1.3",
+    "yarn": "^1.17.3"
   }
 }
